static/css/style.css
/* ... */
.post-content a:focus,.post-content a:hover {
    box-shadow: inset 0 -3px 0 var(--color-primary-active)
}

.post-content h1,.post-content h2,.post-content h3,.post-content h4,.post-content h5,.post-content h6 {
    line-height: 1.25em;
    margin: 1rem 0 2rem;
    text-rendering: optimizeLegibility;
    color: var(--color-content-lead)
}

.post-content h1 {
    font-size: 4rem;
    text-indent: -1px
}

.post-content h2 {
    font-size: 3rem;
    text-indent: -1px
}

.post-content h3 {
    font-size: 2.4rem
}

.post-content h4 {
    font-size: 2rem
}

.post-content h5,.post-content h6 {
    font-size: 2rem;
    font-weight: 500
}

.post-content h1 a,.post-content h2 a,.post-content h3 a,.post-content h4 a,.post-content h5 a,.post-content h6 a {
    font-weight: inherit
}

.post-content p {
    font-family: var(--font-secondary);
    margin: 0 0 1rem 
}

.post-content details, summary {
    font-family: var(--font-secondary);
    margin: 0 0 0.5rem 
}

.post-content ol,.post-content ul {
    font-family: var(--font-secondary);
    margin: 0 0 1rem;
    padding-left: 2em;
    box-sizing: border-box
}

.post-content ul {
    list-style: none
}

.post-content li {
    position: relative
}

.post-content ol>li:before,.post-content ul>li:before {
    position: absolute;
    width: 1.5em;
    margin-left: -2em;
    font-size: 1em;
    font-weight: 500;
    line-height: 2em;
    text-align: right;
    color: var(--color-primary);
    font-family: var(--font-primary)
}

.post-content ul>li:before {
    margin-top: -1px;
    content: '—'
}

.post-content ol {
    list-style-type: none;
    counter-reset: item
}

.post-content ol>li:before {
    content: counter(item) ". " !important;
    counter-increment: item
}

.post-content ol ol,.post-content ol ul,.post-content ul ol,.post-content ul ul {
    padding-left: 30px;
    margin: 15px 0
}

.post-content hr {
    display: block;
    height: 1px;
    margin: 0 0 1rem;
    padding: 0;
    background: var(--color-background-contrast);
    border: 0
}

.post-content blockquote {
    font-family: var(--font-secondary);
    margin: 0 0 1rem;
    padding: 0.25em 1em;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border-left: 0.25em solid var(--color-primary);
    font-style: italic;
    font-weight: 400
}

.post-content blockquote * {
    margin: 0 0 1em;
    font-family: inherit;
    color: inherit
}

.post-content blockquote *:first-child {
    margin-top: 0
}

.post-content blockquote *:last-child {
    margin-bottom: 0
}

.post-content em,.post-content i {
    font-style: italic
}

.post-content b,.post-content strong {
    font-weight: 700;
    color: var(--color-content-lead)
}

.post-content small {
    font-size: 0.9em
}

.post-content dl {
    font-family: var(--font-secondary);
    margin: 0 1rem;
    padding-left: 30px
}

.post-content dl dt {
    font-weight: 500;
    font-size: 0.75em;
    line-height: 1.25em;
    font-weight: 700;
    margin-bottom: 0.33334em;
    font-family: var(--font-primary)
}

.post-content dl dt:before {
    content: '';
    position: absolute;
    width: 1em;
    height: 2px;
    margin-left: -30px;
    margin-top: 0.5em;
    background: var(--color-primary)
}

.post-content dl dd {
    margin-left: 0;
    margin-bottom: 1em
}

.post-content mark {
    background-color: #FFC336
}

.post-content code,.post-content tt {
    position: relative;
    margin: 0 1px;
    padding: 4px 8px;
    font-family: monospace, sans-serif;
    font-size: 0.75em;
    background: var(--color-background-secondary);
    border: 1px solid var(--color-background-contrast);
    top: -2px;
    white-space: pre-wrap
}

.post-content pre {
    position: relative;
    margin: 0 0 1rem;
    padding: 1em;
    overflow: hidden;
    font-family: monospace, sans-serif;
    white-space: pre;
    background: var(--color-background-secondary);
    border: 1px solid var(--color-background-contrast);
    box-sizing: border-box
}

.post-content pre .lines {
    position: absolute;
    width: 2.66667em;
    height: 100%;
    left: 0;
    top: 0;
    padding: 1.33334em 0;
    border-right: 1px solid var(--color-background-contrast);
    color: var(--color-content-secondary);
    font-size: 0.75em;
    line-height: 2em;
    text-align: right;
    box-sizing: border-box;
    background: var(--color-background-secondary);
    user-select: none;
    -webkit-user-select: none
}

.post-content pre .lines .line {
    display: block;
    padding-right: 0.33334em
}

.post-content pre code,.post-content pre tt {
    display: block;
    position: static;
    top: auto;
    /* This is for if the code has line numbers. */
    /* margin: -1.33334em -1.33334em -1.33334em 1.33334em;
    padding: 1.33334em; */
    overflow-x: auto;
    font-size: 0.75em;
    line-height: 2em;
    white-space: pre;
    background: transparent;
    border: none;
    vertical-align: inherit
}

.post-content pre code.language-text {
    margin-left: -1.33334em
}

.post-content kbd {
    display: inline-block;
    margin-bottom: 0.5em;
    padding: 1px 8px;
    border: 1px solid var(--color-background-contrast);
    text-shadow: 0 1px 0 white;
    font-size: 0.9em;
    font-weight: bold;
    background: var(--color-background-secondary);
    border-radius: 4px;
    box-shadow: 0 1px 0 rgba(0,0,0,0.2),0 1px 0 0 white inset
}

.post-content table {
    position: relative;
    width: 100%;
    max-width: 100%;
    margin: 0 0 1rem;
    border: 1px solid var(--color-background-contrast);
    background: var(--color-background-secondary)
}

.post-content table td,.post-content table th {
    position: relative;
    padding: 1.5rem;
    font-size: 0.75em;
    line-height: 1.33334em;
    border: 1px solid var(--color-background-contrast)
}

.post-content table th {
    text-align: left;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 0.75em;
    line-height: 1.33334em;
    color: var(--color-content-secondary)
}
/* ... */

